--- a/README
+++ b/README
@@ -4,3 +4,6 @@ This project developed a novel machine learning algorithm, Multiple Model Select
 transition patterns using various mathematical equations (e.g., sigmoidal, polynomial, gaussian, linear, and so on).
 Random forest machine learning technique is adopted to detect, model, and predict the urban surface percentage of each 
 satellite image pixel. Thousands of satellite images can be processed and analyzed automatically following a Python workflow. 
+
+Important note: The algorithms are only partial because this research is being prepared for publication. Please contact me 
+for project details. 
